module 별 srl 추가 (메뉴별로 사용가능)

--- a/skins/stompesi/index.html
+++ b/skins/stompesi/index.html
@@ -4,7 +4,7 @@
 <load target="./js/common.js" />
 <load target="./js/admin.js" />
 
-
+<input id="module_srl" type="hidden" value="{$module_srl}">
 <include target="_header.html" />
 
 <div class="content-container">
