--- a/skins/stompesi/_description.html
+++ b/skins/stompesi/_description.html
@@ -1,8 +1,8 @@
 <div class="description-container">
-  <div class="panel panel-danger information"> 
+  <div class="panel panel-default information"> 
     <div class="panel-heading"> 
       <h3 class="panel-title">dd</h3> 
     </div> 
-    <div class="panel-body"> </div> 
+    <div class="panel-body"></div> 
   </div>
 </div>
