--- a/skins/stompesi/_control_panel.html
+++ b/skins/stompesi/_control_panel.html
@@ -15,15 +15,16 @@
       <hr/>
 
       <ul class="nav nav-pills nav-justified">
-        <li>
-          
-    <a class="" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-      실행
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" style="width: 100%;">
-      <li><a href="#">실행</a></li>
-      <li><a href="#">새창으로 실행</a></li>
-    </ul>
+        <li>        
+          <a href="#" class="" id="run" aria-haspopup="true" aria-expanded="true" data-event="run-new-window" style="display: inline-block; width: 80%"> {$lang->run_new_window} </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="dropdown-menu" style="display: inline-block; width: 15%">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </a>
+          <ul id="select-run-mode" class="dropdown-menu" aria-labelledby="dropdown-menu" style="width: 100%;">
+            <li><a href="#" data-event="run-current-window">실행</a></li>
+            <li><a href="#" data-event="run-new-window">{$lang->run_new_window}</a></li>
+          </ul>
         </li>
         <li>
           <a id="reset-code-btn" href="{$val->table_of_content_srl}">초기화</a>
